<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.john.dragonballbattle.ResultsActivity"
    android:orientation="vertical"
    android:gravity="bottom">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/resultsTitle"
        android:id="@+id/resultTitle"
        android:textSize="40dp"
        android:paddingBottom="120dp" />

    <TextView
        android:id="@+id/resultPlayerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="80dp" />

    <TextView
        android:id="@+id/resultCharacter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="80dp" />

    <TextView
        android:id="@+id/resultWinLose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="120dp"
        android:gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="viewStats"
            android:text="@string/resultViewStats" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="goToMain"
            android:text="@string/goToMain" />

    </LinearLayout>



</LinearLayout>
